--- a/主页重做.html
+++ b/主页重做.html
@@ -123,8 +123,8 @@ $(document).ready(function() {
 					   </div>            </a>
      		   </div>
      		   <div class="box">
-     		       <a href="#">  
-					   <div class="card bg-03"><span class="card-content">实验室项目</span>
+     		       <a href="二级界面/index.html">  
+					   <div class="card bg-03"><span class="card-content">链接测试</span>
 					   </div>            </a>
      		   </div>
      		   <div class="box">
